[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
rand = "0.8.5"
